Fixed vertical alignment on footer

--- a/www/css/reset.css
+++ b/www/css/reset.css
@@ -140,3 +140,12 @@ input[type=button] {width: auto; overflow: visible;}
 .clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
 .clearfix:after { clear: both; }
 .clearfix { zoom: 1; }
+
+
+/* Ensure that all elements are always sized in more intuituve way
+	 http://learnlayout.com/box-sizing.html */
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
