--- a/www/css/style.less
+++ b/www/css/style.less
@@ -1,19 +1,18 @@
-@debug: false;
-
+/* ======== COMMON ========== */
 @themeDarkColor: #333333;
 @themeLightColor: #eee;
 @themeNoColor: #fff;
 @themeLinkColor: #2ba6cb;
 
-@fixedWidth: 1050px;
-
 @fontFamily: Slab,Georgia,serif;
+@fontSize: 100%;
 
 body {
 	background-color: @themeNoColor;
 	font-family: @fontFamily;
-	font-size: 14px;
+	font-size: @fontSize;
 	margin: 0;
+	margin-top: @headerHeight;
 }
 
 p {
@@ -25,13 +24,16 @@ a {
 	color: @themeLinkColor;
 }
 
-
+/* ======== HEADER ========== */
+@headerHeight: 52px;
+@fixedWidth: 1050px;
 
 header {
 	background-color: @themeDarkColor;
 	position: fixed;
+	top: 0;
 	width: 100%;
-	height: 52px;
+	height: @headerHeight;
 
 	p {
 		color: @themeLightColor;
@@ -40,42 +42,58 @@ header {
 	>div.container {
 		max-width: @fixedWidth;
 		margin: auto;
+
+		>div.searchBar {
+			float: left;
+		}
+
+		>div.menu {
+
+		}
 	}
 }
 
-
+/* ======== FOOTER ========== */
+@footerHeight: 40px;
 
 footer {
 	background-color: @themeDarkColor;
-	height: 50px;
+	height: @footerHeight;
 	width: 100%;
 	position: absolute;
 	bottom: 0;
-	vertical-align: middle;
+	z-index: -99999;
+	display: flex;
+	justify-content: center;
+	font-size: @fontSize - 25%;
 
 	p {
 		color: @themeLightColor;
 	}
 
-	>div.footer {
+	>div.container {
 		max-width: @fixedWidth;
-		margin: auto;
+		width: @fixedWidth;
+		align-self: center;
+		display: flex;
+		flex-direction: row;
+
+		>div {
+			flex: 1 1 auto;
+		}
 
 		>div.stickLeft {
-			float: left;
-
-			>ul {
-				left: -40px; // TODO: Why is it so?
-			}
+			text-align: left;
 		}
+
 		>div.stickRight {
-			float: right;
 			text-align: right;
 		}
 
 		ul {
 			list-style: none;
-			position: relative;
+			margin: 0;
+			padding: 0;
 
 			li {
 				display: inline;
@@ -90,17 +108,17 @@ footer {
 	}
 }
 
+/* ======== DEBUG ========== */
+@debug: false;
 
-
+// Draw border for each element
 body {
 	& when (@debug = true) {
-		div:nth-of-type(even) {
-			border-color: red;
-			border-style: dashed;
+		*:nth-of-type(even) {
+			outline: 1px dashed red;
 		}
-		div:nth-of-type(odd) {
-			border-color: yellow;
-			border-style: dashed;
+		*:nth-of-type(odd) {
+			outline: 1px dashed yellow;
 		}
 	}
 }
